--- a/BestRestaurants/Views/Cuisines/Delete.cshtml
+++ b/BestRestaurants/Views/Cuisines/Delete.cshtml
@@ -1,4 +1,4 @@
-@using BestRestaurants.Models.Cuisine
+@model BestRestaurants.Models.Cuisine
 
 <h2>Are you sure you want to delete this cuisine?</h2>
 
