--- a/BestRestaurants/Views/Cuisines/Index.cshtml
+++ b/BestRestaurants/Views/Cuisines/Index.cshtml
@@ -1,3 +1,16 @@
 <h2>Cuisines</h2>
+@using BestRestaurants.Models
+@model List<BestRestaurants.Models.Cuisine>;
+
+@if(@Model.Count == 0)
+{
+  <p>No Cuisines have been added.</p>
+}
+
+@foreach(Cuisine cuisine in Model)
+{
+  <p>@Html.ActionLink($"{cuisine.Name}", "Details", new {id = cuisine.CuisineId})</p>
+}
 
 <p>@Html.ActionLink("Create Cuisine", "Create", "Cuisines")</p>
+<p>@Html.ActionLink("Home", "Index", "Home")</p>
