--- a/BestRestaurants/Views/Restaurants/Details.cshtml
+++ b/BestRestaurants/Views/Restaurants/Details.cshtml
@@ -6,5 +6,5 @@
 <h4>@Html.DisplayNameFor(model => model.Description): @Html.DisplayFor(model => model.Description)</h4></p>
 
 <p>@Html.ActionLink("Back to List", "Index")</p>
-<p>@Htmk.ActionLinl("Edit", "Edit", new {id = Model.RestaurantId })</p>
+<p>@Html.ActionLink("Edit", "Edit", new {id = Model.RestaurantId })</p>
 <p>@Html.ActionLink("Delete", "Delete", new {id = Model.RestaurantId })</p>
