--- a/BestRestaurants/Views/Cuisines/Details.cshtml
+++ b/BestRestaurants/Views/Cuisines/Details.cshtml
@@ -11,7 +11,7 @@
     <p>No Restaurants Found.</p>
   }
 
-  @foreach(Restaurant restaurant in @Model.Restaurants)
+  @foreach(Restaurant restaurant in Model.Restaurants)
   {
     <li>@restaurant.Name: @restaurant.Description</li>
   }
