--- a/BestRestaurants/Views/Restaurants/Create.cshtml
+++ b/BestRestaurants/Views/Restaurants/Create.cshtml
@@ -11,6 +11,9 @@
   @Html.LabelFor(model => model.Description)
   @Html.TextBoxFor(model => model.Description)
 
+  @Html.LabelFor(model => model.Cuisine)
+  @Html.DropDownList("CuisineId");
+
   <input type="submit" value ="Add Restaurant">
 }
 
